--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <tr>
                     <td width="5%"></td>
                     <td width="70%">
-                        <p style="font-family:Arial, Helvetica, sans-serif; font-size: 17.5px">
+                        <p id="Titulo">
                            <b>Mensaje del Director del Departamento: Mtro. Ramiro Bernal Cuevas </b>
                         </p>
                         <p style="font-family:Arial, Helvetica, sans-serif; font-size: 14.5px">
