--- a/investigacion.html
+++ b/investigacion.html
@@ -52,8 +52,9 @@
                            <b>Mensaje del Reportero: <a href="https://www.caranddriver.com/es/author/220204/sergio-martinez/" >SERGIO MARTÍNEZ </a></b>
                         </p>
                         <p id="texto">
-                            <em>"Noto olor a quemado, pero no sé si es mi coche u otro."</em> Con este inocente mensaje por radio durante los primeros entrenamientos libres, Max Verstappen puso en sobre aviso, aún sin 
-                                saberlo, de que estaba pasando algo.Atentado
+                            <em>"Noto olor a quemado, pero no sé si es mi coche u otro."</em> Con este inocente mensaje por radio durante los primeros entrenamientos libres, <span id="negritas">Max Verstappen</span> puso en sobre aviso, aún sin 
+                                saberlo, de que estaba pasando algo.
+                                <p id="Titulo">Atentado</p>
                                 El olor provenía de una explosión e incendio ocurrido en unas instalaciones que Aramco, irónicamente uno de los patrocinadores de la Fórmula 1, tiene en Jeddah, y que acababa de ser 
                                 alcanzado por un misil. Las informaciones difieren en este punto, siendo la versión más repetida que se lanzaron ocho misiles, de los que siete fueron interceptados, alcanzando el restante 
                                 el objetivo a apenas 10 kilómetros del circuito urbano de Jeddah, lugar donde la Fórmula 1 compite este fin de semana. 
